--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.cc15.anwesha2017.activities.About"
     tools:showIn="@layout/activity_about"
-    android:background="@drawable/background_about"
     >
+    <android.support.v7.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,23 +23,26 @@
         android:text="@string/anweshatext"
         android:textSize="60dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
         />
+    </android.support.v7.widget.CardView>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="5">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about_anwesha"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="30dp"
         android:textSize="20dp"
         android:layout_marginLeft="15dp"
         android:textColor="#000"/>
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/logo"
         android:alpha="0.5"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="30dp"/>
-
-</FrameLayout>
+        android:layout_marginRight="10dp"/>
+    </FrameLayout>
+</LinearLayout>
