--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -4,44 +4,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.WelcomeScreen">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <ImageView
             android:layout_width="125dp"
-            android:layout_height="125dp"
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:src="@drawable/iitplogo2"
             android:id="@+id/iitp_logo"
             android:layout_gravity="center_horizontal|top"/>
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:text="Presents"
             android:textSize="30dp"
             android:textColor="#000"
             android:id="@+id/presents"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="135dp"/>
+            android:layout_gravity="center_horizontal" />
         <ImageView
             android:layout_width="300dp"
-            android:layout_height="300dp"
+            android:layout_height="0dp"
+            android:layout_weight="5"
             android:src="@drawable/logo"
             android:id="@+id/anwesha_logo"
-            android:layout_marginTop="135dp"
             android:layout_gravity="center_horizontal"/>
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:textColor="#000"
+            android:layout_marginTop="10dp"
             android:textSize="40dp"
-            android:layout_marginTop="400dp"
             android:id="@+id/tdl"
             android:layout_gravity="center_horizontal"
 
@@ -50,16 +50,18 @@
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:textColor="#000"
+            android:layout_marginTop="10dp"
             android:textSize="40dp"
-            android:layout_marginTop="460dp"
             android:id="@+id/anwesha_text"
             android:layout_gravity="center_horizontal"
             android:text="Anwesha 2017"
+            android:layout_marginBottom="5dp"
             />
 
 
 
-    </FrameLayout>
+    </LinearLayout>
 </RelativeLayout>
